apps/lidarr/ingressroute-lidarr.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: lidarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.xrs444.net`)
      kind: Rule
      services:
        - name: lidarr
          port: 8686
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
